Finish adding rectangles, add gradient to side rectangles, fix spacing of objects, finish hover animations

--- a/src/pages/Welcome.scss
+++ b/src/pages/Welcome.scss
@@ -6,7 +6,7 @@ body {
   font-family: var(--Poppins);
 }
 
-.App-welcome {
+.app-welcome {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,35 +20,56 @@ body {
   }
 }
 
-.App-container {
-  padding: 100px 0;
-  border: 1px solid #7000ff;
+.app-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 50px 0 25px 0;
+  border: 2px solid #7000ff;
   border-radius: 5px;
-  max-width: 600px;
+  width: 700px;
   background-color: black;
+}
+
+.app-title {
+  display: flex;
+  flex-direction: column;
 }
 
 //Walkthrough Hover Effect
 
 .rectangle {
   border: gray 2px solid;
-  margin-bottom: 10px;
+  border-left: 1px;
+  border-right: 1px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .left-rectangle {
-  background-color: purple;
+  background-image:
+    radial-gradient(closest-corner, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
+    linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.3)),
+    linear-gradient(to top right, #7000ff, #ad6eff);
   width: 100px;
-  border-right: gray 1px solid;
-  transition: all 0.5s ease-in;
+  height: 80px;
+  margin-left: 0;
+  border: gray 2px solid;
+  transition: all 0.3s ease-in-out;
 }
 
 .right-rectangle {
-  background-color: purple;
+  background-image:
+    radial-gradient(closest-corner, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
+    linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.3)),
+    linear-gradient(to bottom left, #7000ff, #ad6eff);
   width: 100px;
-  border-left: gray 1px solid;
-  transition: all 0.5s ease-in;
+  height: 80px;
+  margin-right: 0;
+  border: gray 2px solid;
+  transition: all 0.3s ease-in-out;
 }
 
 .rectangle:hover {
